# circleci-playground

./: .vsconfig  CMakeLists.txt  Powershell_profile.ps1  README.md  configuration.dsc.yaml  vcpkg-configuration.json
.circleci/: config.yml  install_winget.ps1  powershell_profile.ps1
